--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "ava": "^3.15.0",
     "install": "^0.13.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3"
+  },
   "scripts": {
-    "test": "ava tests/Producto-test.js --verbose"
+    "test": "ava tests/Producto-test.js --verbose",
+    "testnyc": "nyc ava tests/Producto-test.js --verbose"
   },
   "author": "",
   "license": "ISC"
